dark mode styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: 222.2 14% 4.9%;
     --foreground: 210 40% 98%;
 
     --card: 222.2 84% 4.9%;
@@ -78,7 +78,7 @@
     @apply bg-background text-foreground;
   }
   h1 {
-    @apply mb-8 text-3xl font-semibold;
+    @apply mb-8 text-6xl font-semibold  line-clamp-1;
   }
   h2 {
     @apply mb-4 text-2xl font-semibold;
